--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
-  "presets": ["es2015", "react"],
-  "env": {
-    "development": {
-      "presets": ["react-hmre"]
-    }
-  }
+  "presets": [ "airbnb", "env", "react" ],
+  "plugins": [
+    [
+      "transform-class-properties", { "spec": true },
+      "react-hot-loader/babel"
+    ]
+  ]
 }
