--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "not ie < 10"
   ],
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
